Added back `npm run build` Changed name in package-lock.json to `verify-eryn-api` Added dist folder to gitignore

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A typescript library that uses the verify.eryn.io Public API to get associations between a Discord account and a Roblox account.",
   "scripts": {
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "build": "tsc",
     "prepublishOnly": "tsc"
   },
   "main": "./dist/library.js",
